# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  configuration.yml  rust-toolchain.toml
.github/workflows/: rust.yml
configuration/: base.yml  local.yml  production.yml
migrations/: 20220107135111_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
