[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.19"
chrono = "0.4.19"
config = "0.11"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.133", features = ["derive"] }
serde-aux = "3"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "=0.5.0-beta.10"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "0.8.2", features = ["v4"] }

[dependencies.sqlx]
version = "0.5.10"
default-features = false
features = [
  "chrono",
  "macros",
  "migrate",
  "offline",
  "postgres",
  "runtime-actix-rustls",
  "uuid",
]

[dev-dependencies]
reqwest = "0.11.9"
